hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_non_static_member_01.php.exp
File "protected_non_static_member_01.php", line 20, characters 12-13:
No instance method `me` in `T` (Typing[4053])
  File "protected_non_static_member_01.php", line 18, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_01.php", line 17, characters 7-7:
  This is why I think it is an object of type T
  File "protected_non_static_member_01.php", line 17, characters 7-7:
  Declaration of `T` is here
File "protected_non_static_member_01.php", line 20, characters 12-13:
You cannot access this member (Typing[4112])
  File "protected_non_static_member_01.php", line 13, characters 20-21:
  This member is private
File "protected_non_static_member_01.php", line 29, characters 12-13:
No instance method `me` in `T2` (Typing[4053])
  File "protected_non_static_member_01.php", line 27, characters 19-21:
  Did you mean `foo` instead?
  File "protected_non_static_member_01.php", line 24, characters 7-8:
  This is why I think it is an object of type T2
  File "protected_non_static_member_01.php", line 24, characters 7-8:
  Declaration of `T2` is here
